Fix HTMLDataListElement.options to include even options that are not suggestions https://bugs.webkit.org/show_bug.cgi?id=208102

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

* web-platform-tests/html/semantics/forms/the-datalist-element/datalistoptions-expected.txt:
Expect this test to pass instead of failing.

Source/WebCore:

* html/ColorInputType.cpp:
(WebCore::ColorInputType::suggestedColors const): Use
HTMLDataListElement::suggestions instead of HTMLCollection, both for efficiency
and for correctness.

* html/GenericCachedHTMLCollection.cpp:
(WebCore::GenericCachedHTMLCollection<traversalType>::elementMatches const):
Removed code to filter out options that are not valid suggestions. This is not
called for in the HTML specification.

* html/HTMLDataListElement.cpp:
(WebCore::HTMLDataListElement::isSuggestion): Added.

* html/HTMLDataListElement.h: Added isSuggestion and suggestions functions so
logic about which datalist options are suggestions can be easily shared. The
suggestions uses the new filteredDescendants function template.

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::setupDateTimeChooserParameters): Use
HTMLDataListElement::suggestions instead of HTMLCollection.

* html/TextFieldInputType.cpp:
(WebCore::TextFieldInputType::suggestions):  Use
HTMLDataListElement::suggestions instead of HTMLCollection. Also added a FIXME
since this implementation uses case-insensitive ASCII but it's for user interface
and the current implementation might be insufficient for some lanagues.

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::paintSliderTicks): Use
HTMLDataListElement::suggestions instead of HTMLCollection.

LayoutTests:

* fast/forms/datalist/datalist-expected.txt: Updated expectations.
* fast/forms/datalist/datalist.html: Updated test since the options collection
includes all options that are descendants, even ones that are not sugggestions.
The web platform tests already had this right; we had a failing test there.

Canonical link: https://commits.webkit.org/221061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257194 268f45cc-cd09-0410-ab3c-d52691b4dbfc