Source/WebCore/html/HTMLDataListElement.cpp
@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2009 Google Inc. All rights reserved.
- * Copyright (C) 2010 Apple Inc. All rights reserved.
+ * Copyright (C) 2010-2020 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are
@@ -37,6 +37,7 @@
 
 #include "GenericCachedHTMLCollection.h"
 #include "HTMLNames.h"
+#include "HTMLOptionElement.h"
 #include "IdTargetObserverRegistry.h"
 #include "NodeRareData.h"
 #include <wtf/IsoMallocInlines.h>
@@ -63,6 +64,11 @@ Ref<HTMLCollection> HTMLDataListElement::options()
 void HTMLDataListElement::optionElementChildrenChanged()
 {
     treeScope().idTargetObserverRegistry().notifyObservers(getIdAttribute());
+}
+
+bool HTMLDataListElement::isSuggestion(const HTMLOptionElement& descendant)
+{
+    return !descendant.isDisabledFormControl() && !descendant.value().isEmpty();
 }
 
 } // namespace WebCore
