Source/WebCore/html/HTMLDataListElement.h
@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2009, Google Inc. All rights reserved.
- * Copyright (C) 2010 Apple Inc. All rights reserved.
+ * Copyright (C) 2010-2020 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are
@@ -33,10 +33,12 @@
 
 #if ENABLE(DATALIST_ELEMENT)
 
-#include "HTMLCollection.h"
+#include "ElementIterator.h"
 #include "HTMLElement.h"
 
 namespace WebCore {
+
+class HTMLCollection;
 
 class HTMLDataListElement final : public HTMLElement {
     WTF_MAKE_ISO_ALLOCATED(HTMLDataListElement);
@@ -46,6 +48,9 @@ public:
     Ref<HTMLCollection> options();
 
     void optionElementChildrenChanged();
+
+    static bool isSuggestion(const HTMLOptionElement& descendant);
+    auto suggestions() const { return filteredDescendants<HTMLOptionElement, isSuggestion>(*this); }
 
 private:
     HTMLDataListElement(const QualifiedName&, Document&);
